add new website from server na

--- a/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
+++ b/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1785,40 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chip-va-potato-phan-2" title="Chip và Potato (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/em-phan-1" title="Em (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chip-va-potato-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/em-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chip và Potato (Phần 2)
+             Em (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Chip and Potato (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-nhan-ma-phan-1" title="Thế giới nhân mã (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-nhan-ma-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thế giới nhân mã (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Centaurworld (Season 1)
+             You (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,40 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cracks" title="Cracks">
+          <a class="list-top-movie-link" href="/phim-moi/co-gai-kretek" title="Cô gái Kretek">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cracks-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-kretek-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cracks
+             Cô gái Kretek
             </span>
             <span class="list-top-movie-item-en">
-             Cracks
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tan-ban-sinh-duyen" title="Tân Bán Sinh Duyên">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-ban-sinh-duyen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tân Bán Sinh Duyên
-            </span>
-            <span class="list-top-movie-item-en">
-             Half A Lifelong Romance
+             Cigarette Girl
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1873,21 +1829,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-la-truong-an" title="Truyện Lạ Trường An">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-willoughby" title="Gia đình Willoughby">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-la-truong-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-willoughby-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truyện Lạ Trường An
+             Gia đình Willoughby
             </span>
             <span class="list-top-movie-item-en">
-             The Man's Secret
+             The Willoughbys
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vung-dat-cam-lang-phan-ii" title="Vùng Đất Câm Lặng Phần II">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-cam-lang-phan-ii-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vùng Đất Câm Lặng Phần II
+            </span>
+            <span class="list-top-movie-item-en">
+             A Quiet Place: Part II
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-croods-ky-nguyen-moi" title="Gia Đình Croods: Kỷ Nguyên Mới">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-croods-ky-nguyen-moi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gia Đình Croods: Kỷ Nguyên Mới
+            </span>
+            <span class="list-top-movie-item-en">
+             The Croods: A New Age
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
